# quarkonium-simulations

./: .gitignore  H_data.json  README.md  callback_dict.json  callback_dict.pickle  pyproject.toml  run_final_data.pickle
.ai/docs/: thesis_ideas.md
QC of Heavy Quarkonium/: H_data.json  QHO_elemetnts.py  VQE 2.py  VQE 3.py  VQE.py  callback_dict.json  run_final_data.pickle
articles/arXiv-2202.03333v2/: QCCharm_v4.bbl  QCCharm_v4.bib  QCCharm_v4.tex
docs/: method_comparison.tex
output/comparison/: comparison_report.tex  excited_results.json  noise_results.json  noiseless_results.json
output/gallimore/: vqe_result.json
output/gallimore_noisy/: vqe_result.json
output/gallimore_shots/: vqe_result.json
output/gallimore_zne/: vqe_result.json
output/thesis/: excited_results.json  noise_results.json  noiseless_results.json
output/woloshyn/: vqite_result_1P1.json  vqite_result_1S0.json  vqite_result_3S1.json
output/woloshyn_noisy_test/: vqite_result_1S0.json
output/woloshyn_plottest/: vqite_result_1S0.json
output/woloshyn_shots_test/: vqite_result_1S0.json
output/woloshyn_test/: vqite_result_1S0.json
output/yihuoliufanzhang/: ttite_result.json
quarksim/: __init__.py  results.py  simulation.py  visualization.py
quarksim/comparison/: __init__.py  __main__.py  comparison_report.tex  config.py  methods.py  noise.py  plots.py  report.py  run.py
quarksim/gallimore/: README.md  __init__.py  (+6 more)
scripts/: run_vqe_jw_noise_sweep.py
thesis/: chapter1.tex  chapter2.tex  chapter3.tex  main.bbl  main.bcf  main.blg  main.run.xml  main.tex  references.bib
(+18 files in other folders)
